# r-engine

./: CMakeLists.txt  README.md
Documentation/: randString.md
client/: CMakeLists.txt  README.md
client-enet/: CMakeLists.txt
client-enet/include/: ClientGameState.hpp  IScenesState.hpp  NetworkClient.hpp
client-enet/include/Screens/: Menu.hpp  Options.hpp
client-enet/include/Utils/: Utils.hpp
client-enet/src/: ClientGameState.cpp  NetworkClient.cpp  main.cpp
client-enet/src/Screens/: Menu.cpp  Options.cpp
client-interface/: IClient.hpp
client/assets/menus/: r-type-01.xcf
client/include/: Client.hpp  ClientInterface.hpp  Game.hpp  IGame.hpp  IGameState.hpp  InitGame.hpp  MainMenu.hpp
client/src/: Client.cpp  Game.cpp  InitGame.cpp  Main.cpp  MainMenu.cpp
ecs/: CMakeLists.txt
ecs/components/: Components.hpp
ecs/include/: Entity.hpp  IndexedZipper.hpp  ProtocolSerialization.hpp  Registry.hpp  SparseArray.hpp  ZipperIterator.hpp
ecs/scene-interface/: IScene.hpp  SceneManager.hpp
ecs/src/: Main.cpp
ecs/systems/headers/: AnimationSystem.hpp  AudioSystem.hpp  BasicMissileSystem.hpp  BirdSystem.hpp  BydosAI.hpp  ClockSystem.hpp  CollisionSystem.hpp  CovidBoss.hpp  CreditSceneSystem.hpp  DamageSystem.hpp  DmgIndicatorSystem.hpp  EnemyMissile.hpp  ExplosionSystem.hpp  FadeTransitionSystem.hpp  ForceSystem.hpp  GorgiaAI.hpp  HealingSystem.hpp  ISystems.hpp  InputSystem.hpp  LifeCounterSystem.hpp  MissileCleanupSystem.hpp  NetworkSystem.hpp  ParallaxSystem.hpp  PipeSystem.hpp  RenderingSystem.hpp  RobotAI.hpp  SceneManagerSystem.hpp  SceneSystem.hpp  ScoreSystem.hpp  ShieldSystem.hpp  ShrimpBoss.hpp  TransformSystem.hpp  Utils.hpp  VelocitySystem.hpp
ecs/tests/: RegistryTests.cpp  SparseArrayTest.cpp  ZipperTests.cpp  generateCoverage.sh
gamefield/include/: RTypeScenes.hpp
renderer/: IRenderer.hpp  Renderer.hpp
server/: CMakeLists.txt
server-enet/: CMakeLists.txt  README.md
server-enet/include/: GameField.hpp  NetworkServer.hpp  SafeQueue.hpp  ServerGameState.hpp
server-enet/src/: NetworkServer.cpp  ServerGameState.cpp  main.cpp
server-interface/: IServer.hpp
server/include/: Connection.hpp  Message.hpp  NetworkManager.hpp  Queue.hpp  Server.hpp  ServerInterface.hpp
server/src/: Main.cpp  Server.cpp
shared/include/: IGameState.hpp
